--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -4,17 +4,18 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
-    <title>{% block title %}Django Userena - Accounts for your Django application{% endblock %}</title>
+    <title>{% block title %}Eucleia Education Portal - Helping you fulfill your dreams{% endblock %}</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Accounts for your Django application" />
-    <meta name="keywords" content="accounts, django, bread and pepper, open source" />
-    <meta name="author" content="Bread and Pepper" />
+    <meta name="description" content="Education portal helping in counselling and admission in India" />
+    <meta name="keywords" content="education, eucleia, counselling, education, india, admission, colleges, institutes, courses, universities" />
+    <meta name="author" content="Eucleia Consultancy LLP" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/master.css" %}" />
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+    <script type="text/javascript" src="{% static "js/easy.notification.js" %}"></script>
     {% block extra_js %}{% endblock %}
   </head>
   <body>
@@ -52,9 +53,10 @@
         <ul id="nav">
           <li><a href="{% url 'promo' %}"><span>{% trans 'Home' %}</span></a></li>
           {% if user.is_authenticated %}
-          <li><a href="{% url 'userena_profile_list' %}"><span>{% trans 'All profiles' %}</span></a></li>
-          <li><a href="{% url 'userena_umessages_list' %}"><span>{% trans 'Messages' %}</span></a></li>
-          <li><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'Account' %} ({{ user.username }})</span></a></li>
+          <!-- <li><a href="{% url 'userena_profile_list' %}"><span>{% trans 'All profiles' %}</span></a></li> -->
+          <!-- <li><a href="{% url 'userena_umessages_list' %}"><span>{% trans 'Messages' %}</span></a></li> -->
+          <li><a href="{% url 'edu_index' %}"><span>{% trans 'Education Portal' %}</span></a></li>
+          <li><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'Profile' %} ({{ user.username }})</span></a></li>
           <li><a href="{% url 'userena_signout' %}"><span>{% trans 'Signout' %}</span></a></li>
           {% else %}
           <li><a href="{% url 'userena_signin' %}"><span>{% trans 'Signin' %}</span></a></li>
@@ -67,22 +69,11 @@
         {% endif %}
 
       </div><!-- /header-->
-      <a href="https://github.com/bread-and-pepper/django-userena/" id="fork">{% trans 'Fork me hard' %}</a>
       {% block content_title %}{% endblock %}
       <div id="content-container">
         {% block content %}{% endblock %}
       </div><!-- /content-container-->
-      <div id="footer"><p>{% trans 'Made by' %} <a href="http://breadandpepper.com">Bread &amp; Pepper</a> | Hosting sponsored by <a href="https://www.dotcloud.com/">Dotcloud</a></p></div>
+      <div id="footer"><p>{% trans 'Made by' %} <a href="http://eucleiacorp.com">Eucleia</a></p></div>
     </div><!-- /container-->
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-8888610-14']);
-      _gaq.push(['_trackPageview']);
-      (function() {
-       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-       var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-       })();
-     </script>
    </body>
  </html>
