--- a/demo/templates/edu/my_applications.html
+++ b/demo/templates/edu/my_applications.html
@@ -79,6 +79,7 @@
             url: "{% url 'edu_apply_for_institute' %}", // the file to call
             success: function(response) { 
             	alert(response);// on success..
+            	$.easyNotification('Success! Your application has been received.'); 
             	$('#appmessages').html("Success! Your application has been received.");
             }
         });
@@ -89,11 +90,19 @@
             type: 'POST', // GET or POST
             url: "{% url 'edu_delete_application' %}", // the file to call
             success: function(response) { 
-            	alert(response);// on success..
-            	$('#appmessages').html("Success! Your application has been deleted");
+            	//alert(response);// on success..
+            	btnid = 'deleteapplication-' + appln_id;
+            	delete_row(btnid);
+            	$.easyNotification('Success! Your application has been deleted'); 
+            	//$('#appmessages').html("Success! Your application has been deleted");
             }
         });
   	}
+  	function delete_row(btnid){    
+        if (btnid != "") {         
+             $('#'+btnid).closest("tr").remove();
+          } 
+  	};
   /*]]>*/
 </script>
 {% endblock %}
@@ -125,7 +134,8 @@
   			<td>{{ application.stream.name }}</td>
   			<td>{{ application.priority_number }}</td>
   			<td>{{ application.created_date }}</td>
-  			<td><input type='button' class='button' value='Delete' id='deleteapplication-{{ application.appln_id }}' onclick="js_delete_application('{{ application.appln_id }}')"></td>
+  			<td><input type='button' class='button' value='Delete' id='deleteapplication-{{ application.appln_id }}'
+  			 onclick="js_delete_application('{{ application.appln_id }}')"></td>
   		</tr>
   	{% endfor %}
   	</tbody>
