--- a/demo/templates/static/promo.html
+++ b/demo/templates/static/promo.html
@@ -2,52 +2,44 @@
 {% load url from future %}
 {% block content %}
 <div id="intro">
-  <h2 class="intro"><span>django-userena</span><br/>Accounts made beautifully simple</h2>
+  <h2 class="intro"><span>Eucleia Education</span><br/>Helping you fulfill your dreams</h2>
 
-  <p class="intro">Userena is a Django application that supplies your Django project with
-  full account management. It's a fully customizable application that takes
-  care of the signup, activation, messaging and more. It's BSD licensed, which
-  means you can use it commercially for free!</p>
+  <p class="intro">Eucleia Education aims to be one place for all your education queries. It provides you
+  with all the information you need to make an informed decision about your career. That's not all. We have
+  tie-ups with well-known universities to make your application process a breeze. No more going to each college
+  and applying. We have simplified the process and cut down the stress. Now just click a button to apply to
+  universities and institutes of your choice!</p>
 
-  <p id="xtra-info">Got any feedback? Email me at &#112;&#101;&#116;&#97;&#114;&#64;&#98;&#114;&#101;&#97;&#100;&#97;&#110;&#100;&#112;&#101;&#112;&#112;&#101;&#114;&#46;&#99;&#111;&#109;. For bugs you can report an issue at <a href="http://github.com/bread-and-pepper/django-userena/issues">Github</a>.</p>
+  <p id="xtra-info">Got any questions or feedback? Email us at education [AT] eucleiacorp.com.</p>
 
 </div><!-- /intro-->
 
 <ul class="features">
-  <li><h3>What is userena?</h3>
+  <li><h3>About Eucleia Education</h3>
 
-  <p> Userena is an django application that supplies your project with full
-  account management. It handles the signup, activation, signin etc. for you.
-  It also supplies your users with an optional profile model that integrates
-  <a href="http://www.gravatar.com">gravatar</a> avatars. Signup at
-  this website and try it out for yourself.
+  <p>Eucleia Education knows the problems and stress associated with education system in India. This is a foray
+  into making things better!
   </p>
 
   </li>
-  <li><h3>It's free!</h3>
+  <li><h3>It's stress-free!</h3>
 
-  <p>Userena is licensed under the BSD license. This means it's free for
-  commercial use. You don't have to worry about any licensing..</p>
+  <p>Apply to universities across the country by just clicking a single button. Process ultra-simplified!</p>
 
   <li>
-  <h3>Used in production</h3>
+  <h3>Tie-ups with well known universites</h3>
 
-  <p> <a href="http://www.breadandpepper.com">Bread & Pepper</a> uses userena
-  in their own projects. Because of this we have often revised the code and
-  spared you repeating this work. This has made us confident enough to be able
-  to say that the the software is ready for production. Because it's open
-  source, we also get feedback from the community that we use to build a solid
-  product.  </p>
+  <p> We have tied-up with universities and institutes across the country just for you!
 
   </li>
-  <li><h3>100% test coverage</h3>
+  <!-- <li><h3>100% test coverage</h3>
 
   <p>Account management is an important aspect of any website, therefore we have
   chosen for 100% test coverage for every bit of code. This reduces bugs and
   makes sure that we don't introduce any new ones when updating.
 
-  </li>
-  <li><h3>Messaging</h3>
+  </li> -->
+  <!-- <li><h3>Messaging</h3>
 
   <p>Userena comes with an optional, chat-like, messaging system. This allows your
   users to communicate with each other through your site. It's use is intuitive
@@ -61,9 +53,9 @@
     This way we can let the user decide if they want to share their profile to
     everyone, registered users or nobody.
   </p>
-  </li>
+  </li> -->
 </ul>
-<ul class="blocks">
+<!-- <ul class="blocks">
   <li><h3>Browse source</h3>
   <a href="http://github.com/bread-and-pepper/django-userena" id="browse">Browse</a>
   </li>
@@ -76,5 +68,5 @@
   <li><h3>Try it out!</h3>
   <a href="{% url 'userena_signup' %}" id="demo">Try it out!</a>
   </li>
-</ul>
+</ul> -->
 {% endblock %}
