--- a/demo/templates/500.html
+++ b/demo/templates/500.html
@@ -3,11 +3,11 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
     <head>
-        <title>Userena crashed!</title>
+        <title>Eucleia Education crashed!</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="description" content="Accounts for your Django application" />
-        <meta name="keywords" content="accounts, django, bread and pepper, open source" />
-        <meta name="author" content="Bread and Pepper" />
+    	<meta name="description" content="Education portal helping in counselling and admission in India" />
+    	<meta name="keywords" content="education, eucleia, counselling, education, india, admission, colleges, institutes, courses, universities" />
+    	<meta name="author" content="Eucleia Consultancy LLP" />
         <link rel="stylesheet" type="text/css" media="screen" href="{{ MEDIA_URL }}css/master.css" />
         <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
         <link href='https://fonts.googleapis.com/css?family=Droid+Sans:regular,bold' rel='stylesheet' type='text/css' />
@@ -16,22 +16,12 @@
         <div id="top">&nbsp;</div>
         <div id="container">	
             <div id="content-container">
-                <h1>Userena crashed</h1>
+                <h1>Eucleia Education crashed</h1>
                 
                 <p>Sorry for the inconvenience.</p>
 
-                <p>Please take the time to report an issue at Github so it doesn't happen again.</p>
+                <p>Please take the time to report an issue so it doesn't happen again.</p>
             </div><!-- /content-container-->
         </div><!-- /container-->
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-8888610-14']);
-            _gaq.push(['_trackPageview']);
-            (function() {
-             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-             })();
-         </script>
      </body>
  </html>
