--- a/demo/static/css/flat-ui.css
+++ b/demo/static/css/flat-ui.css
@@ -311,9 +311,9 @@ h6 {
   letter-spacing: -2px;
   line-height: 100px; }
   .demo-logo .logo {
-    background: url("../images/demo/logo-mask.png") center 0 no-repeat;
-    background-size: 256px 186px;
-    height: 186px;
+    background: url("../img/ecl-logo.png") center 0 no-repeat;
+    background-size: 150px 146px;
+    height: 146px;
     margin: 0 auto 26px;
     overflow: hidden;
     text-indent: -9999em;
