--- a/demo/static/css/master.css
+++ b/demo/static/css/master.css
@@ -12,21 +12,21 @@ breadandpepper.com
 ................................... */
 
 html, body{
-    font-family: 'Droid Sans', helvetica, arial, Geneva, sans-serif;
-    background: #eae5e1 url(../img/bg-container.png) repeat-y center top;
+    /* font-family: 'Droid Sans', helvetica, arial, Geneva, sans-serif;
+    background: #eae5e1 url(../img/bg-container.png) repeat-y center top; */
 }
 
 #container{
     width: 1008px;
     margin: 30px auto 50px;
-    -moz-border-radius: 8px;
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
-     -moz-box-shadow: 0 0 3px #999;
-    -webkit-box-shadow: 0 0 3px #999;
-    box-shadow: 0 0 3px #999;
-	background-color: #f6f4f2;
-	border: 1px solid #fff;
+    /*-moz-border-radius: 8px;
+   // -webkit-border-radius: 8px;
+    //border-radius: 8px;
+    // -moz-box-shadow: 0 0 3px #999;
+    //-webkit-box-shadow: 0 0 3px #999;
+    //box-shadow: 0 0 3px #999; */
+	background-color: none;
+	//border: 1px solid #fff;
 	padding: 0 10px;
 }
 
@@ -48,7 +48,7 @@ html, body{
     position: relative;
 }
 
-#nav{
+/*#nav{
     position: absolute;
     right: 12px;
     top: 48px;
@@ -115,7 +115,7 @@ html, body{
 
 #nav li a span:active { 
 
-}
+}*/
 
 #intro{
     padding: 30px 20px;
@@ -535,12 +535,12 @@ p.forgot-password{
     margin: 30px 0 10px;
     border-bottom: 1px solid #f1edeb;
     border-top: 1px solid #f1edeb;
-}
+} 
 
 /*	Nav
 ................................... */
 
-#header h1{
+ #header h1{
     width: 150px;
     height: 112px;
     margin: 0;
@@ -606,7 +606,7 @@ ul#profile-nav li a{
 
 ul#profile-nav li a:hover{
     text-decoration: underline;
-}
+} 
 
 /*	features
 ................................... */
