--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
   <head>
     <title>{% block title %}Eucleia Education Portal - Helping you fulfill your dreams{% endblock %}</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Education portal helping in counselling and admission in India" />
     <meta name="keywords" content="education, eucleia, counselling, education, india, admission, colleges, institutes, courses, universities" />
@@ -18,7 +18,53 @@
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{% static "js/easy.notification.js" %}"></script>
+    <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
+    <script type="text/javascript">
+		  /*<![CDATA[*/
+		             
+		 $(document).ajaxSend(function(event, xhr, settings) {
+		    function getCookie(name) {
+		        var cookieValue = null;
+		        if (document.cookie && document.cookie != '') {
+		            var cookies = document.cookie.split(';');
+		            for (var i = 0; i < cookies.length; i++) {
+		                var cookie = jQuery.trim(cookies[i]);
+		                // Does this cook$('#appmessages').htmlie string begin with the name we want?
+		                if (cookie.substring(0, name.length + 1) == (name + '=')) {
+		                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+		                    break;
+		                }
+		            }
+		        }
+		        return cookieValue;
+		    }
+		    function sameOrigin(url) {
+		        // url could be relative or scheme relative or absolute
+		        var host = document.location.host; // host + port
+		        var protocol = document.location.protocol;
+		        var sr_origin = '//' + host;
+		        var origin = protocol + sr_origin;
+		        // Allow absolute or scheme relative URLs to same origin
+		        return (url == origin || url.slice(0, origin.length + 1) == origin + '/') ||
+		            (url == sr_origin || url.slice(0, sr_origin.length + 1) == sr_origin + '/') ||
+		            // or any other URL that isn't scheme relative or absolute i.e relative.
+		            !(/^(\/\/|http:|https:).*/.test(url));
+		    }
+		    function safeMethod(method) {
+		        return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+		    }
+		
+		    if (!safeMethod(settings.type) && sameOrigin(settings.url)) {
+		        xhr.setRequestHeader("X-CSRFToken", getCookie('csrftoken'));
+		    }
+		});
+	</script>
+    
+    
+     <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
     {% block extra_js %}{% endblock %}
   </head>
   <body>
@@ -67,7 +113,6 @@
 							<div class="nav-collapse collapse">
 								<ul class="nav">
 									<li><a href="{% url 'promo' %}">{% trans 'Home' %}</a></li>
-									
 									{% if user.is_authenticated %}
 							          <li><a href="{% url 'edu_index' %}"><span>{% trans 'Education Portal' %}</span></a></li>
 							          <li><a href="{% url 'userena_profile_detail' user.username %}"><span>{% trans 'Profile' %} ({{ user.username }})</span></a></li>
@@ -91,5 +136,18 @@
       	</div><!-- /content-container-->
       	<div id="footer"><p>{% trans 'Made by' %} <a href="http://eucleiacorp.com">Eucleia</a></p></div>
     </div><!-- /container-->
+   	<script type="text/javascript" src="{% static "js/jquery-ui-1.10.0.custom.min.js" %}"></script>
+   	<script type="text/javascript" src="{% static "js/jquery.dropkick-1.0.0.js" %}"></script>
+   	<script type="text/javascript" src="{% static "js/custom_checkbox_and_radio.js" %}"></script>
+   	<script type="text/javascript" src="{% static "js/custom_radio.js" %}"></script>
+   	<script type="text/javascript" src="{% static "js/jquery.tagsinput.js" %}"></script>
+   	<script type="text/javascript" src="{% static "js/bootstrap-tooltip.js" %}"></script>
+   	<script type="text/javascript" src="{% static "js/jquery.placeholder.js" %}"></script>
+   	<script type="text/javascript" src="{% static "js/application.js" %}"></script>
+    <script src="http://vjs.zencdn.net/c/video.js"></script>
+    <!--[if lt IE 8]>
+    	<script type="text/javascript" src="{% static "js/icon-font-ie7.js" %}"></script>
+   		<script type="text/javascript" src="{% static "js/icon-font-ie7-24.js" %}"></script>
+    <![endif]-->
    </body>
  </html>
