--- a/demo/templates/edu/search_results.html
+++ b/demo/templates/edu/search_results.html
@@ -4,12 +4,25 @@
 		<p>No Institute found. Please try using different search options.</p>
 	{% else %}
 		{% for inst in institutes %}
-			<p>
-				<span><a href="#"><span>{{ inst.name }}</span></a></span>
-				<span><input type='button' class='button' value='Show Streams' id='showstreams-{{ inst.id }}' onclick="js_show_streams('{{ inst.id }}')"></span>
-			</p>
-			<div id="allstreamswrapper-{{ inst.id}}"></div>
+			<div class="row">
+				<div class="span6"><a href="#">{% if inst.id in applied_institutes %}<span class="fui-checkmark-16"></span>{% endif %}{{ inst.name }}</a></div>
+				<div class="span3"><input type='button' class='button' value='Apply'
+				 id='showstreams-{{ inst.id }}' onclick="js_show_streams('{{ inst.id }}')"></div>
+			</div>
 		{% endfor %}
+		<div id="modal-show-streams" class="modal hide fade" tabindex="-1" role="dialog"
+			aria-labelledby="modal-show-streams" aria-hidden="true">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+				<h3 id="myModalLabel">Select streams to apply to...</h3>
+			</div>
+			<div id="modal-show-streams-body" class="modal-body"></div>
+			<div class="modal-footer">
+				<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+				<button class="btn btn-primary"	onclick="js_apply_streams('modal-show-streams');">
+				Apply for Selected Streams</button>
+			</div>
+		</div>
 	{% endif %}
 	</div>
 </div>
