Bunch of functionality added

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -11,14 +11,14 @@
     <meta name="keywords" content="education, eucleia, counselling, education, india, admission, colleges, institutes, courses, universities" />
     <meta name="author" content="Eucleia Consultancy LLP" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/master.css" %}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/bootstrap.css" %}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/flat-ui.css" %}" />
-    <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/master.css" %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/master.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/bootstrap.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/flat-ui.css' %}" />
+    <link rel="stylesheet" type="text/css" media="screen" href="{% static 'css/master.css' %}" />
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
-
+    
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{% static "js/bootstrap.min.js" %}"></script>
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
     <script type="text/javascript">
 		  /*<![CDATA[*/
 		             
