remove popup alert message`

--- a/demo/templates/edu/index.html
+++ b/demo/templates/edu/index.html
@@ -78,7 +78,7 @@
 					$.unblockUI();
 				},
             success: function(response) { 
-            	alert(response);// on success..
+            	//alert(response);// on success..
 				var obj = $.parseJSON(response);
 				
 				if(obj['status'] == 'success')
