emoved popup alert from My Application page

--- a/demo/templates/edu/my_applications.html
+++ b/demo/templates/edu/my_applications.html
@@ -23,7 +23,7 @@
             	delete_row(btnid);
 				
 				var obj = $.parseJSON(response);
-				alert(obj['status']);
+				//alert(obj['status']);
 				if(obj['status'] == 'success')
 				{
 					setMessageSpan('Your application for the selected streams has been successfully deleted.', 'btn btn-large btn-block btn-primary');
