Added the draggable feature to set priority number for each applicationID :Server Side implementation is not yet done

--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -166,6 +166,7 @@
    	<script type="text/javascript" src="{% static "js/jquery.placeholder.js" %}"></script>
    	<script type="text/javascript" src="{% static "js/application.js" %}"></script>
 	<script type="text/javascript" src="{% static "js/jquery.blockUI.js" %}"></script>
+	<script type="text/javascript" src="{% static "js/jquery.tablednd.js" %}"></script>
     <script src="http://vjs.zencdn.net/c/video.js"></script>
     <!--[if lt IE 8]>
     	<script type="text/javascript" src="{% static "js/icon-font-ie7.js" %}"></script>
