--- a/demo/templates/edu/my_applications.html
+++ b/demo/templates/edu/my_applications.html
@@ -3,8 +3,27 @@
 {% load url from future %}
 {% block title %}{% trans "My Applications" %}{% endblock %}
 {% block extra_js %}
+
+
 <script type="text/javascript">
   /*<![CDATA[*/
+	/*This method makes the table rows dragable enabling user to reorder the table rows*/
+	$(document).ready(function() {
+									$("#my-applications").tableDnD({
+																	onDrop: function(aplTable, draggedRow) {
+																				/*Get the row collection*/
+																				var aplTableRowCollection = aplTable.tBodies[0].rows;
+																				
+																				/*Loop through the row collection to set the new priority number for each row*/
+																				for (var rowCounter=0; rowCounter < aplTableRowCollection.length; rowCounter++) {
+																					
+																					$(aplTableRowCollection[rowCounter]).find('#priorityIndex').html(rowCounter + 1);
+																				}
+																				
+																	}	
+																	});
+								});
+	
   	function js_delete_application(appln_id){
 		$.ajax({ // create an AJAX call...
             data: {appln_id : appln_id}, // get the form data
@@ -59,7 +78,7 @@
 
 {% block content %}
 	<div id="showMessage" ></div>
-  <table id='my-applications' class="table table-striped">
+  <table id="my-applications" class="table table-striped">
   	<thead>
   		<th>Application ID</th>
   		<th>Institute</th>
@@ -70,11 +89,11 @@
   	</thead>
   	<tbody>
   	{% for application in applications %}
-  		<tr>
-  			<td>{{ application.appln_id }}</td>
+  		<tr id="{{ forloop.counter }}">
+  			<td id="applicationID">{{ application.appln_id }}</td>
   			<td>{{ application.institute.name }}</td>
   			<td>{{ application.stream.name }}</td>
-  			<td>{{ application.get_priority_number_display }}</td>
+  			<td id="priorityIndex">{{ application.get_priority_number_display }}</td>
   			<td>{{ application.created_date }}</td>
   			<td>
 			<div class="span3">
