--- a/demo/templates/base.html
+++ b/demo/templates/base.html
@@ -84,7 +84,7 @@
 			<div class="navbar-inner">
 				<div class="container">
 					<div class="nav-collapse collapse">
-					<span> Eucleia Consultancy LLP | Career Path</span>
+					<span> Eucleia | Career Path</span>
 						<ul class="nav" style="float:right;">
 							{% if user.is_authenticated %}
 							<li><a href="{% url 'promo' %}" class="primay_menu_item"><div class="manageapplication_icon" style="padding:0;"><span>Manage Applications</span></div></a>
