--- a/demo/templates/edu/search_results.html
+++ b/demo/templates/edu/search_results.html
@@ -17,7 +17,7 @@
 			<tbody>
 			{% for inst in institutes %}
 				<tr>
-					<td>{{ inst.name }}</td>
+					<td><a href="#">{% if inst.id in applied_institutes %}<span class="fui-checkmark-16"></span>{% endif %}{{ inst.name }}</a></td>
 					<td>{% if  inst.aicte_approv_status == 1 %} Yes {% else %} No {% endif %}</td>
 					<td>{{ inst.university.name }}</td>
 					<td></td>
