Demo data added. Creating JSON to save preferences

--- a/demo/templates/edu/index.html
+++ b/demo/templates/edu/index.html
@@ -25,6 +25,9 @@
         });
     });
   	function js_show_streams(inst_pk){
+		
+		resetStreamSelectionMessage();
+	
   		$.ajax({
 				url: "{% url 'edu_get_streams_for_institute' %}",
 				data: {inst_pk: inst_pk},
@@ -57,6 +60,7 @@
   	}*/
 	
   	function js_apply_streams(div_id){
+		resetStreamSelectionMessage();
 		var selected_streams = [];
 	    // get all checked items
 	    var checked = $("#" + div_id).find('input:checked');
@@ -66,30 +70,48 @@
 	    });
 	    var inst_pk = $('#stream-institute-id').attr('value');
 		
-		$('#modal-show-streams').modal('toggle');
-		$.ajax({ // create an AJAX call...
-            data: {inst_pk : inst_pk, selected_streams : selected_streams.join(",")}, // get the form data
-            type: 'POST', // GET or POST
-            url: "{% url 'edu_apply_for_institute' %}", // the file to call
-			beforeSend:function(){
-					$.blockUI();
-				},
-				complete: function() {
-					$.unblockUI();
-				},
-            success: function(response) { 
-            	//alert(response);// on success..
-				var obj = $.parseJSON(response);
-				
-				if(obj['status'] == 'success')
-				{
-					setMessageSpan('Your application for the selected streams has been successfully registered. Please visit My Applications page to see all the applications', 'btn btn-large btn-block btn-primary');
-				}else{
-					setMessageSpan('We encountered error while registering your application. Please retry after some time. You may visit My Applications page to see all the applications', 'btn btn-large btn-block btn-danger');
+		if(selected_streams.length > 0)
+		{
+			$('#modal-show-streams').modal('toggle');
+			$.ajax({ // create an AJAX call...
+				data: {inst_pk : inst_pk, selected_streams : selected_streams.join(",")}, // get the form data
+				type: 'POST', // GET or POST
+				url: "{% url 'edu_apply_for_institute' %}", // the file to call
+				beforeSend:function(){
+						$.blockUI();
+					},
+					complete: function() {
+						$.unblockUI();
+					},
+				success: function(response) { 
+					//alert(response);// on success..
+					var obj = $.parseJSON(response);
+					
+					if(obj['status'] == 'success')
+					{
+						setMessageSpan('Your application for the selected streams has been successfully registered. Please visit My Applications page to see all the applications', 'btn btn-large btn-block btn-primary');
+					}else{
+						setMessageSpan('We encountered error while registering your application. Please retry after some time. You may visit My Applications page to see all the applications', 'btn btn-large btn-block btn-danger');
+					}
 				}
-            }
-        });
+			});
+		}else{
+			setStreamSelectionMessage('Please select a Stream or press <b><i>Cancel</b></i> button.');
+		}
   	}
+
+	function resetStreamSelectionMessage()
+	{
+		
+		$('#noStreamSelected').html('');
+		$('#noStreamSelected').hide();
+	}
+	
+	function setStreamSelectionMessage(message)
+	{
+		$('#noStreamSelected').html(message);
+		$('#noStreamSelected').show();
+	}
 	
 function resetMessageSpan()
 	{
