--- a/demo/templates/edu/search_results.html
+++ b/demo/templates/edu/search_results.html
@@ -46,11 +46,13 @@
 				<h3 id="myModalLabel">Select Streams</h3>
 			</div>
 			<div id="modal-show-streams-body" class="modal-body"></div>
+			<div style="padding:5px; color:red;" id="noStreamSelected"></div>
 			<div class="modal-footer">
 				<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
 				<button class="btn btn-primary"	onclick="js_apply_streams('modal-show-streams');">
 				Apply for Selected Streams</button>
 			</div>
+			
 		</div>
 	{% endif %}
 	</div>
