--- a/demo/static/css/master.css
+++ b/demo/static/css/master.css
@@ -226,7 +226,7 @@ border-bottom-left-radius: 8px;
     width:100%;
     padding: 5px 0;
 	position:absolute;
-	bottom:0;
+	/*bottom:0;*/
 	text-align:center;
 }
 
