--- a/demo/templates/edu/my_applications.html
+++ b/demo/templates/edu/my_applications.html
@@ -111,7 +111,7 @@
 			 dataType: 'json',
             data: jsonDataObjectArray, // get the form data
             type: 'POST', // GET or POST
-            url: "{% url 'TBD_HARSH' %}", // the file to call
+            url: "TBD_Harsh", // the file to call
 			beforeSend:function(){
 					$.blockUI();
 				},
@@ -186,7 +186,7 @@
 		</tbody>
 	  </table>
 	</div>  
-  <div id="buttonBarBottom" style="width:100%"></div>
+  <div id="buttonBarBottom" ></div>
   <div id="modal-show-instructions" class="modal hide fade" tabindex="-1" role="dialog"
 			aria-labelledby="modal-show-instructions" aria-hidden="true">
 			<div class="modal-header">
